--- a/src/main/resources/templates/vehicles/newVehicle/editNewVehicle.html
+++ b/src/main/resources/templates/vehicles/newVehicle/editNewVehicle.html
@@ -25,7 +25,7 @@
                         <div class="row">
                             <div class="form-group col-xs-12 col-md-3 col-lg-3">
                                 <label for="model" class="form-label" th:text="#{new.vehicle.model}"></label>
-                                <input type="text" class="form-control" th:value="|${newVehicleDTO.model.name} ${newVehicleDTO.model.year} ${newVehicleDTO.model.finish}|" th:placeholder="#{new.vehicle.plate.placeholder}" readonly>
+                                <input type="text" class="form-control" th:value="${newVehicleDTO.model.toString()}" th:placeholder="#{new.vehicle.plate.placeholder}" readonly>
                             </div>
                             <div class="form-group col-xs-12 col-md-3 col-lg-3">
                                 <label class="form-label" for="chassisNumber" th:text="#{new.vehicle.chassis.number}"></label>
