--- a/src/main/resources/templates/vehicles/newVehicle/newVehicleList.html
+++ b/src/main/resources/templates/vehicles/newVehicle/newVehicleList.html
@@ -46,6 +46,16 @@
                                 </select>
                             </div>
                         </div>
+                        <div clas="row mt-2">
+                            <div class="form-group col-xs-12 col-md-3 col-lg-3">
+                                <label class="form-label" for="isNew" th:text="#{new.vehicle.isNew}"></label>
+                                <select class="form-select" th:field="*{isNew}">
+                                    <option selected value="" th:text="#{select.option.default}"></option>
+                                    <option value=1>Nuevo</option>
+                                    <option value=0>Usado</option>
+                                </select>
+                            </div>
+                        </div>
                         <div class="pull-right mt-4">
                             <a sec:authorize="hasAnyRole('ROLE_ADMIN','ROLE_MANAGER')" th:href="@{/vehicles/newVehicle/add}" class="btn btn-success btn-block-xs m-r-10 m-b-5" data-toggle="tooltip">
                                 <em class="fa fa-plus" aria-hidden="true"></em>
@@ -77,8 +87,10 @@
                             <th id="cellNewVehicleModelYear" class="text-center" th:text="#{model.list.year}" data-toogle="tooltip" th:title="#{model.list.year.sort}"></th>
                             <th id="cellNewVehicleChassisNumber" class="text-center" th:text="#{new.vehicle.chassis.number}" data-toogle="tooltip" th:title="#{new.vehicle.chassis.number.sort}"></th>
                             <th id="cellNewVehiclePlate" class="text-center" th:text="#{new.vehicle.plate}" data-toogle="tooltip" th:title="#{new.vehicle.plate.sort}"></th>
+                            <th id="cellNewVehicleCost" class="text-center" th:text="#{new.vehicle.cost}" data-toogle="tooltip" th:title="#{new.vehicle.cost.sort}"></th>
                             <th id="cellNewVehicleSellPrice" class="text-center" th:text="#{new.vehicle.sell.price}" data-toogle="tooltip" th:title="#{new.vehicle.sell.price.sort}"></th>
                             <th id="cellNewVehicleStatus" class="text-center" th:text="#{new.vehicle.status}" data-toogle="tooltip" th:title="#{new.vehicle.status.sort}"></th>
+                            <th id="cellNewVehicleIsNew" class="text-center" th:text="#{new.vehicle.isNew}" data-toogle="tooltip" th:title="#{new.vehicle.isNew.sort}"></th>
                             <th id="cellNewVehicleEdit" class="text-center" th:text="#{table.header.edit}"></th>
                             <th sec:authorize="hasAnyRole('ROLE_ADMIN','ROLE_MANAGER')" id="cellNewVehicleDelete" class="text-center" th:text="#{table.header.delete}"></th>
                         </tr>
@@ -90,8 +102,10 @@
                             <td headers="cellNewVehicleModelYear" class="text-center align-center-vertical" th:text="${row.model.year}"></td>
                             <td headers="cellNewVehicleChassisNumber" class="text-center align-center-vertical" th:text="${row.chassisNumber}"></td>
                             <td headers="cellNewVehiclePlate" class="text-center align-center-vertical" th:text="${row.plate}"></td>
-                            <td headers="cellNewVehicleSellPrice" class="text-center align-center-vertical" th:text="${row.sellPrice}"></td>
+                            <td headers="cellNewVehicleCost" class="text-center align-center-vertical" th:text="${row.cost}+'€'"></td>
+                            <td headers="cellNewVehicleSellPrice" class="text-center align-center-vertical" th:text="${row.sellPrice}+'€'"></td>
                             <td headers="cellNewVehicleStatus" class="text-center align-center-vertical" th:text="${row.status.name}"></td>
+                            <td headers="cellNewVehicleIsNew" class="text-center align-center-vertical" th:text="${row.isNew ? 'Nuevo' : 'Usado'}"></td>
                             <td headers="cellNewVehicleEdit" class="text-center align-center-vertical">
                                 <a th:href="@{/vehicles/newVehicle/edit/{idNewVehicle}(idNewVehicle=${row.idNewVehicle})}">
                                     <i class="fa fa-pencil" aria-hidden="true"></i>
