--- a/src/main/resources/templates/common/asideMenu-fragment.html
+++ b/src/main/resources/templates/common/asideMenu-fragment.html
@@ -33,6 +33,14 @@
                         <i class="fa fa-car" aria-hidden="true"></i>
                         <span th:text="#{aside.menu.vehicles}" class="nav_name"></span>
                     </a>
+                    <a sec:authorize="hasAnyRole('ROLE_ADMIN','ROLE_MANAGER')" th:href="@{/sells}" class="nav_link" th:classappend="${navLink} == 'vehicles' ? 'active' : ''">
+                        <i class="fa fa-euro" aria-hidden="true"></i>
+                        <span th:text="#{aside.menu.sells}" class="nav_name"></span>
+                    </a>
+                    <a sec:authorize="hasRole('ROLE_SELLER')" th:href="@{/sells/{idSeller}" class="nav_link" th:classappend="${navLink} == 'vehicles' ? 'active' : ''">
+                        <i class="fa fa-euro" aria-hidden="true"></i>
+                        <span th:text="#{aside.menu.sells}" class="nav_name"></span>
+                    </a>
                     <a th:href="@{/configuration}" class="nav_link" th:classappend="${navLink} == 'configuration' ? 'active' : ''">
                         <i class="fa fa-cog" aria-hidden="true"></i>
                         <span th:text="#{aside.menu.configuracion}" class="nav_name"></span>
