--- a/src/main/resources/templates/vehicles/newVehicle/newVehicleList.html
+++ b/src/main/resources/templates/vehicles/newVehicle/newVehicleList.html
@@ -32,7 +32,7 @@
                                 <input type="text" class="form-control" th:field="*{plate}" th:placeholder="#{new.vehicle.plate.placeholder}">
                             </div>
                             <div class="form-group col-xs-12 col-md-3 col-lg-3">
-                                <label class="form-label" for="status" th:text="#{new.vehicle.model}"></label>
+                                <label class="form-label" for="model" th:text="#{new.vehicle.model}"></label>
                                 <select class="form-select" th:field="*{idModel}">
                                     <option selected value="" th:text="#{select.option.default}"></option>
                                     <option th:each="model : ${modelList}" th:value="${model.idModel}" th:text="${model.toString()}"></option>
@@ -42,7 +42,7 @@
                                 <label class="form-label" for="status" th:text="#{new.vehicle.status}"></label>
                                 <select class="form-select" th:field="*{idStatus}">
                                     <option selected value="" th:text="#{select.option.default}"></option>
-                                    <option th:each="status : ${statusList}" th:value="${status.idStatus}" th:text="${status.name}"></option>
+                                    <option th:each="status : ${statusList}" th:if="${status.idSatus != 3}" th:value="${status.idStatus}" th:text="${status.name}"></option>
                                 </select>
                             </div>
                         </div>
